2004-03-24  Atsushi Enomoto <atsushi@ximian.com>

	* Reference.cs, Signature.cs : They should keep input element and hence
	  keep namespace context nodes on LoadXml() as same as SignedInfo.
	* SignedXml.cs : Fixed SignedInfoTransformed() to fill context 
	  namespace nodes into the input document (unlike other classes, there
	  seems no other way to keep ns-nodes here).
	  Now some of W3C phaos xmldsig test passes.

2004-03-23  Atsushi Enomoto <atsushi@ximian.com>

	* SignedInfo.cs : It holds input element and directly returns it
	  unless the properties are not set.
	  Throw CryptographicException when Reference is empty *and* GetXml()
	  is *created*. (when just returning input element, no exception is
	  thrown).

2004-03-23  Atsushi Enomoto <atsushi@ximian.com>

	* DataObject.cs : It now holds element instead of each parameters.
	  Avoid loading element content to different document unless its
	  properties were modified (to keep namespace node context).

2004-03-20 Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Removed unused (and commented) ComputeHash method.

2004-03-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDsigXPathTransform.cs : just found stupid bug.

2004-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Lot of small changes to complete TODOs and to match 
	the new unit tests.

2004-03-17  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: The old method was working for creating signature -
	so it was reintroduced for (only) this case.

2004-03-17  Atsushi Enomoto <atsushi@ximian.com>

	* SignedXml.cs : the result from enveloped signature transform should
	  be canonicalized before getting its hash.
	* XmlDsigEnvelopedSignatureTransform.cs : in XPath selection,
	  if the node is Signature itself it is not allowed.
	  PreserveWhitespace is required.

2004-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* SignedXml.cs: Changed (again). This time we use the Stream when 